--- a/style.css
+++ b/style.css
@@ -2,6 +2,26 @@
 	width:100%;
 }
 
+header{
+	background: #bbbbbb
+}
+
+
+nav a {
+	text-transform: uppercase;
+	color:black;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+
+}
+
+nav li {
+	display: inline-block;
+}
+
+
+
 .principal{
 	background: #CCCCCC;
 	padding: 30px;
